# BGRemover

./: .env.example  Dockerfile  README.md  docker-compose.yml  pyproject.toml
app/: Dockerfile  main.py
app/api/: auth.py  background_removal.py  ml.py  user_actions.py
app/core/: database.py  security.py
app/models/: transaction.py  user.py
app/schemas/: user.py
background_removal/models/RMBG-1.4/: MyPipe.py
frontend/: Dockerfile  Home.py  config.py
frontend/pages/: 1_Login.py  2_Registration.py  3_MainPage.py  4_Transactions.py
frontend/utils/: api.py  auth.py
